--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
   <script src="js/common.js"></script>
-  <link href="css/style.css" rel="stylesheet" media="all">
+  <link href="style.css" rel="stylesheet" media="all">
 </head>
 <body>
   <div id="upperHeaderWrapper">
