--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="format-detection" content="telephone=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
-  <script src="js/common.js"></script>
+  <script src="common.js"></script>
   <link href="style.css" rel="stylesheet" media="all">
 </head>
 <body>
